# webserver_baseUWSC

./: README.md
webclient/css/: main.css  params_table.css  point_cloud.css  style.css
webclient/html/: 123.html  monitor.html
webclient/js/: params_table.js  pointcloud.js  webtalk.js
webclient/three.js/examples/jsm/loaders/: PCDLoader.js
webserver/: CHANGELOG.md  CMakeLists.txt  REDEAD.MD  main.cpp.bak  package.xml
webserver/include/server/: uws_server.h
webserver/include/websocket/: websocket.h
webserver/src/: main.cpp
webserver/src/rosTalk/: rostalk.cpp  rostalk.h
webserver/src/webTalk/server/: uws_server.cpp
webserver/src/webTalk/websocket/: websocket.cpp
